<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvSrno"
        android:layout_width="5dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/srno"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvItems"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/particulars"
        android:textAlignment="textStart"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvQu"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/quantity"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvRate"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/rate"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/total"
        android:textAlignment="center"
        android:textColor="@color/black"/>
</LinearLayout>