<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/outer_Container">
<TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/surana_automobiles"
    android:textSize="24sp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="50dp"/>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="8dp"
        android:text="@string/address_suranaAutomobile"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="8dp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:lines="4"
        android:text="@string/toGNP"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvdate"
        android:layout_width="91dp"
        android:layout_height="40dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:textAlignment="center"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="57dp"
        android:layout_height="32dp"
        android:layout_below="@+id/textView2"
        android:layout_alignBaseline="@+id/tvdate"
        android:layout_toStartOf="@+id/tvdate"
        android:text="@string/datetv"
        android:textAlignment="center"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/subject"
        android:textSize="12sp" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salutation"
        android:textSize="12sp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="7dp"
        android:layout_below="@+id/textView5"
        />
    <TextView
        android:id="@+id/tvvehicleNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView6"
        />

    <include
        android:id="@+id/layout1"
        layout="@layout/paticulars_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_below="@+id/textView6"

        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/layout1"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rTable"
        android:layout_centerHorizontal="true"
        android:layout_alignBaseline="@+id/gTotal"
        android:layout_toStartOf="@+id/gTotal"
        android:layout_marginTop="10dp"
        android:text="@string/total"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/gTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rTable"
        android:layout_alignParentEnd="true"
        android:layout_margin="40dp"

        />






    <Button
        android:id="@+id/button"
        android:layout_width="122dp"
        android:layout_height="37dp"
        android:layout_marginBottom="2dp"
        android:text="Button"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
     />





















</RelativeLayout>