<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/outer_Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surana_automobiles"
            android:textSize="24sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"

            android:background="@drawable/custom_line"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:background="@drawable/custom_line"/>



        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="8dp"
            android:text="@string/address_suranaAutomobile"
            android:layout_below="@+id/textView1"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:lines="4"
            android:text="@string/toGNP"
            android:textSize="12sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvdate"
            android:layout_width="75dp"
            android:layout_height="33dp"
            android:layout_below="@+id/textView2"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:textAlignment="textStart"
            android:textSize="12sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="57dp"
            android:layout_height="32dp"
            android:layout_below="@+id/textView2"
            android:layout_alignBaseline="@+id/tvdate"
            android:layout_toStartOf="@+id/tvdate"
            android:text="@string/datetv"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/subject"
            android:textSize="12sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salutation"
            android:textSize="12sp"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="7dp"
            android:layout_below="@+id/textView5"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tvvehicleNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView6"
            android:textColor="@color/black"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_centerHorizontal="true"
            android:background="@drawable/custom_line"/>
        <include
            android:id="@+id/layout1"
            layout="@layout/paticulars_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/textView6"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout1"
            android:layout_centerHorizontal="true"
            android:background="@drawable/custom_line"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="8dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/layout1"
            android:layout_marginTop="13dp"
            />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/SGST"
            android:layout_centerHorizontal="true"
            android:layout_alignBaseline="@+id/gTotal"
            android:layout_toStartOf="@+id/gTotal"
            android:layout_marginTop="10dp"
            android:text="@string/total"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/gTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rTable"
            android:layout_alignParentEnd="true"
            android:textColor="@color/black"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:textStyle="bold"
            android:textSize="17sp"
            />

<!--        <TextView-->
<!--            android:id="@+id/textView8"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@+id/rTable"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_alignBaseline="@+id/taxable"-->
<!--            android:layout_toStartOf="@+id/taxable"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:text="Taxable Value"-->
<!--            android:textSize="15sp"-->
<!--            android:textColor="@color/black"-->
<!--            />-->

<!--        <TextView-->
<!--            android:id="@+id/taxable"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@+id/rTable"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            android:textColor="@color/black"-->
<!--            android:layout_marginStart="40dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginEnd="20dp"-->
<!--            android:layout_marginBottom="2dp"-->
<!--            android:textStyle="bold"-->
<!--            android:textSize="17sp"-->
<!--            />-->
<!--        <TextView-->
<!--            android:id="@+id/textView9"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@+id/rTable"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_alignBaseline="@+id/CGST"-->
<!--            android:layout_toStartOf="@+id/CGST"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:text="CGST"-->
<!--            android:textSize="15sp"-->
<!--            android:textColor="@color/black"-->
<!--            />-->

<!--        <TextView-->
<!--            android:id="@+id/CGST"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@+id/taxable"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            android:textColor="@color/black"-->
<!--            android:layout_marginStart="40dp"-->
<!--            android:layout_marginTop="2dp"-->
<!--            android:layout_marginEnd="20dp"-->
<!--            android:layout_marginBottom="2dp"-->
<!--            android:textStyle="bold"-->
<!--            android:textSize="17sp"-->
<!--            />-->
<!--        <TextView-->
<!--            android:id="@+id/textView10"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@+id/CGST"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_alignBaseline="@+id/SGST"-->
<!--            android:layout_toStartOf="@+id/SGST"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:text="SGST"-->
<!--            android:textSize="15sp"-->
<!--            android:textColor="@color/black"-->
<!--            />-->

<!--        <TextView-->
<!--            android:id="@+id/SGST"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@+id/CGST"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            android:textColor="@color/black"-->
<!--            android:layout_marginStart="40dp"-->
<!--            android:layout_marginTop="2dp"-->
<!--            android:layout_marginEnd="20dp"-->
<!--            android:layout_marginBottom="2dp"-->
<!--            android:textStyle="bold"-->
<!--            android:textSize="17sp"-->
<!--            />-->
<!--        <TextView-->
<!--            android:id="@+id/textView8"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_alignParentBottom="true"-->
<!--            android:text="FROM "-->
<!--            android:textAlignment="center"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="17sp"-->
<!--            android:layout_marginBottom="30dp"-->
<!--            android:layout_marginLeft="5dp"/>-->
        <Button
            android:id="@+id/button"
            android:layout_width="122dp"
            android:layout_height="37dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="2dp"
            android:text="Generate Pdf" />


    </RelativeLayout>


